--- a/styles.css
+++ b/styles.css
@@ -256,6 +256,11 @@ span.badge {
   background-color: #39c;
   border-radius: 3px;
   padding: 10px 20px;
+  color: #fff;
+}
+
+.part.generate-code {
+  text-align: justify;
 }
 
 .part h2.part-title {
@@ -648,6 +653,53 @@ textarea#input-vals,
   resize: vertical;
 }
 
+.code-zone-to-append {
+  position: relative;
+}
+
+.codebox pre {
+  overflow: auto;
+  max-width: 100%;
+  width: 100%;
+  max-height: 250px;
+  background-color: #ffffff;
+  color: #282828;
+  border-radius: 3px;
+  margin: 10px 0px;
+  border: none!important;
+  padding: 20px 15px 20px 70px!important;
+  position: relative;
+}
+
+.codebox pre::before {
+  content: 'Carregando...';
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.75);
+  color: #fff;
+  text-align: center;
+  padding: 95px;
+}
+
+.codebox pre.prettyprinted::before {
+  content: none;
+  display: none;
+}
+
+code.codebox > pre ol li {
+  list-style-type: decimal!important;
+  background-color: #fff!important;
+}
+
+code.codebox > pre ol.linenums {
+  margin-left: 0px;
+  padding-left: 0px;
+}
+
+
 /*
  * Tables:
  */
@@ -819,4 +871,3 @@ table thead tr td:last-child {
     width: 58%;
   }
 }
-
