[5.1] Move to https.

--- a/styles.css
+++ b/styles.css
@@ -100,7 +100,7 @@ header.page-header {
 header.page-header a.logo {
   color: #333;
   text-transform: uppercase;
-  background: url(http://i38.servimg.com/u/f38/18/21/41/30/sigle10.png) no-repeat 0 0;
+  background: url(https://i.imgur.com/xPZysoy.png) no-repeat 0 0;
   padding: 10px 0px 10px 70px;
   text-decoration: none;
   font-size: 36px;
